Set content opacity of DFHAndroid surfacelayer based on renderer frame contents.

The browser updates the overlay video mode flag before the renderer can
send a new frame. This means that when switching from fullscreen to
non-fullscreen the browser was expecting the renderer the fill the frame
completely and wasn't drawing the background, but it was accidentally
leaving part of the frame corrupted and uncleared.

BUG=631866
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2302023003
Cr-Commit-Position: refs/heads/master@{#417131}

Former-commit-id: 862bef99a8b729f501689b0658f029464ff84135